Fixed chat overflow scroll

--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -1,6 +1,6 @@
 @import "../../client/variables.css";
 
-.container {
+.chat {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -14,19 +14,21 @@
   border: var(--border);
   border-radius: 3px;
   margin-bottom: 0.25rem;
-  padding: 0.5rem;
-  overflow: auto;
+
+  display: flex;
+  position: relative;
 }
 
 .messages {
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  padding: 0.5rem;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  max-height: 100%;
+  overflow-y: auto;
 }
 
 .message {
-  flex: none;
   min-height: 1.5rem;
 }
 
